# study-django-src

./: .gitignore  makefile  manage.py  pyproject.toml
application/: models.py  tests.py  urls.py  views.py
application/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  dev.py
