[tool.poetry]
name = "study-django-src"
version = "0.1.0"
description = ""
authors = ["jak010 <bluetoon@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.0.0"
django-sqlformatter = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
